# pstring

./: .clang-format  LICENSE  README.md  meson.build
docs/: pstring-encoding.3  pstring.3
include/pstring/: allocator.h  dictionary.h  encoding.h  io.h  pattern.h  pstrdict.h  pstring.h
src/: allocator_std.h  dictionary.c  encoding.c  io.c  pattern.c  pf_cpuinfo.h  pstrdict.c  pstring.c
test/: dictionary.c  encoding.c  io.c  main.c  pf_assert.h  pf_test.h  pstrdict.c  pstring.c  test.c
